<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".activities.CategoryActivity">

    <RelativeLayout
        android:id="@+id/rlIngredientHeader"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:src="@drawable/back_button" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/medium_gray"
            android:layout_toEndOf="@id/ivBack"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:padding="10dp"
                android:background="@drawable/rectangular_transparent"
                android:src="@drawable/search"/>

            <EditText
                android:id="@+id/etSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="100dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/black"
                android:hint="@string/search_for_item"
                android:background="@android:color/transparent"
                />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/rlIngredientHeader">
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tlCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:tabSelectedTextColor="@color/black"
            style="@style/AppTabLayout"
            />
    </RelativeLayout>


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vpIngredient"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/background_color"
        app:layout_constraintTop_toBottomOf="@id/rlCategory"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>